ベースファイルに全体のデータ追記

--- a/scss/_hensu.scss
+++ b/scss/_hensu.scss
@@ -1,5 +1,12 @@
-$layout_width_inner: 980px;
-$fontFamily: 'Montserrat', sans-serif, 'M PLUS 1p';
-$fontColor: #333;
-$fontColorPoint: #93e9da;
-$bgColor:rgb(254, 254, 254);
+$layout_width_inner: 1000px;
+
+$font-family: 'Noto Sans JP', sans-serif;
+$font-family-mincho :   a-otf-ryumin-pr6n, serif;
+
+$fontColor: #4c4f35;
+$gnavFontColor: #5c6614;
+
+
+$bgColor:#e0e4c6;
+$lineColor: #e5db70;
+
