ファイル構成を変更

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,8 +2,42 @@
 * Foundation
 * ========================== */
 // @import "foundation/**";
-@import "_reset";
-@import "_hensu";
-@import "_mixin";
-@import "_base";
-@import "_main";
+// @import "_reset";
+// @import "_hensu";
+// @import "_mixin";
+// @import "_base";
+// @import "_main";
+
+/**
+* Foundation
+* ========================== */
+@import "foundation/**";
+// @import "foundation/_reset";
+// @import "foundation/_hensuu";
+// @import "foundation/_mixin";
+// @import "foundation/_base";
+
+/**
+* Layout
+* ========================== */
+@import "layout/**";
+// @import "layout/_header";
+// @import "layout/_footer";
+
+/* Project ------------ */
+@import "project/**";
+
+// @import "project/_header";
+// @import "object/project/_footer";
+// @import "object/project/_nav";
+// @import "object/project/_news";
+// @import "object/project/_panel";
+// @import "object/project/_form";
+// @import "object/project/_footer";
+
+/* Utility ------------ */
+// @import "object/utility/_utility";
+// @import "object/utility/_margin";
+
+
+
