ファイルの基本内容を修正

--- a/scss/foundation/_config.scss
+++ b/scss/foundation/_config.scss
@@ -1,12 +1,40 @@
-$layout_width_inner: 1000px;
 
-$font-family: 'Noto Sans JP', sans-serif;
-$font-family-mincho :   a-otf-ryumin-pr6n, serif;
+/* サイト幅 */
+$site_inner: 1000px;
 
+/* フォントファミリー */
+$ff-default: 'Noto Sans JP', sans-serif;
+$ff-mincho : a-otf-ryumin-pr6n, serif;
+
+/* フォントカラー */
 $fontColor: #4c4f35;
-$gnavFontColor: #5c6614;
+$fc-sub: #5c6614;
 
+/* フォントサイズ */
+$fz_m: 1.4rem;
+$fz_default: 1.6rem;
+$fz_l: 1.8rem;
+$fz_2l: 2rem;
+$fz_3l: 2.8rem;
 
+/* フォントウェイト */
+$fw-default: 300;
+$fw-l: 600;
+
+/* 行の高さ */
+$lh-default: 1.5;
+
+/* 背景・ブロック区切り等 */
 $bgColor:#e0e4c6;
-$lineColor: #e5db70;
+$blockColor: #e5db70;
+
+/* テーブルボーダー */
+$cr-table: #4c4f35;
+
+/* オパシティ */
+$opacity : .7;
+
+/* フォーム */
+$cr-form-bd: #4c4f35;
+$cr-form-bd_avtive : #4c4f35;
 
